[package]
name = "rM-Play3r"
version = "0.1.0"
authors = ["DeltaManiac <maxpaynered@gmail.com>"]
build = "build.rs"

[dependencies]
piston = "0.36.0"
piston2d-graphics = "0.26.0"
pistoncore-glutin_window = "0.46.0"
piston2d-opengl_graphics = "0.53.0"
piston_window = "0.80.0"
pistoncore-sdl2_window = "0.50.0"
piston-music = "0.24.0"
piston-button_controller = "0.5.0"